--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.21.3",
     "mongoose": "^6.4.0",
     "next": "12.1.6",
     "nextjs-cors": "^2.1.1",
