--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.21.3",
+    "moment": "^2.29.3",
     "mongoose": "^6.4.0",
     "next": "12.1.6",
     "nextjs-cors": "^2.1.1",
